--- a/main.css
+++ b/main.css
@@ -15,6 +15,10 @@ body{
     width: 50px;
     height: 50px;
 }
+.tile a{
+    width: 50px;
+    height: 50px;
+}
 .tile img:hover{
     transform: scale(1.05)
 }
